--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint **/*.ts",
     "prettier": "npx prettier src/**/*.ts --write && npx prettier build/**/*.js --write",
-    "jasmine": "tsc && set ENV=test&& db-migrate --env test up && jasmine && db-migrate --env test down -c 3",
+    "jasmine": "tsc && set ENV=test&& db-migrate --env test up && jasmine --random=false && db-migrate --env test down -c 3",
     "test": "npm run tsc && npm run jasmine",
     "start": "node src/server.ts",
     "watch": "tsc-watch --noClear --esModuleInterop src/server.ts --outDir ./build --onSuccess \"node ./build/server.js\"",
